--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ a:hover {
     position: fixed;
     left: 0;
     top: 0;
-    width: 270px;
+    width: 360px;
     height: 100%;
     z-index: 1000;
     padding: 50px 30px;
@@ -108,7 +108,7 @@ a:hover {
 }
 
 .sidebar-position-left #pageWrapper {
-    margin-left: 270px;
+    margin-left: 360px;
     padding: 50px 50px 50px 50px;
     position: relative;
     min-height: 100vh;
@@ -118,6 +118,14 @@ a:hover {
 .sidebar-position-left #pageWrapper > #page > .main-content > .sqs-layout > .row.sqs-row:first-child > .sqs-col-12 > .sqs-block-horizontalrule:first-child {
     padding-top: 0;
     margin-top: 0;
+}
+
+/* Vertical container for text section */
+.text-container-vertical {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    min-height: calc(100vh - 100px);
 }
 
 /* Header Wrapper */
